# rac_tool

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: prerelease.yml  release.yml  rust.yml
copier/: Cargo.toml
copier/src/: file_copier.rs  lib.rs  logger.rs  replacer.rs
copier/tests/: copier_test.rs
copier/tests/yaml/: config_test.yml
init/: Cargo.toml
init/src/: lib.rs  schema.rs
init/tests/: init_test.rs
initializer/: Cargo.toml
initializer/src/: lib.rs
initializer/tests/: init_test.rs
initializer/tests/yaml/: config_test.yml
logger/: Cargo.toml
logger/src/: lib.rs
schema/: Cargo.toml
schema/src/: lib.rs
src/: lib.rs  main.rs  run.rs  runner.rs
src/logger/: mod.rs
tests/playground/: config_test.yml  hello.txt.example
tests/playground/random/: hello2.txt.example  targeted_file.txt
tests/specs/: copy_test.rs  init_test.rs  mod.rs  read_yml.rs  replace_test.rs
