[package]
name = "fs_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "./initializer/", "./copier/"]

[dependencies]
initializer = { path = "./initializer" }
copier = { path = "./copier" }
schema = { path = "./schema" }
logger = { path = "./logger" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
